--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "babel-plugin-root-import": "^6.6.0",
+    "metro-config": "^0.81.0",
     "typescript": "^5.1.3"
   },
   "private": true,
