--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.2.3",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "^7.2.0",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-picker/picker": "2.4.10",
     "expo": "~49.0.23",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
-    "expo-secure-store": "^13.0.2",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.30.1",
     "orthpad6": "file:",
