--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/metro-runtime": "^3.2.3",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "expo": "~49.0.23",
     "expo-constants": "~14.4.2",
